@@ -11,6 +11,7 @@ CHANGELOG Roundcube Webmail
 - Fix syntax error in mssql.initial.sql (#6097)
 - Fix bug where contacts export by selection returned no more than 10 entries (#6103)
 - Fix searching contacts by address in LDAP source (#6084)
+- Fix X-Frame-Options:ALLOW-FROM support, remove custom click-jacking protection (#6057)
 
 RELEASE 1.3.3
 -------------
